sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:22: error: Unmatched closing brace '}' ignored here
}
^